Hooked up socketio

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,8 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='/socket.io/socket.io.js')
+    script.
+      var socket = io('http://localhost:3000');
   body
     block content
