more txt to speech work

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,8 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  button Start
+  input(type="text", style="width: 100%")
+  span#final_span.final
+  hr
+  span#interim_span.interim
