Some server side stuff now

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,10 +3,10 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  button Start
-  input(type="text", style="width: 100%")
+  h3 Final
   span#final_span.final
   hr
+  h3 Interim
   span#interim_span.interim
   h1= 'Hint'
   ul
