--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,6 @@
 extends layout
 
 block content
-  h1= 'Hint'
-  ul
-    each person in people
-      li= person.text
+  h1= title
+  img(src=image)
+  p= summary
