More card changes

--- a/views/index.jade
+++ b/views/index.jade
@@ -39,7 +39,7 @@ html
           a(href="#")
             span(style="font-weight:400;") hint
             | :
-            span(color="#555") hints for your conversation
+            span(color="#555", style="margin-left:3px;") hints for your conversation
         span.pull-right
           #bars
             .bar
