--- a/views/index.jade
+++ b/views/index.jade
@@ -14,9 +14,10 @@ html
     link(rel="stylesheet", href="./stylesheets/styles.css")
   body
     script#template(type="x-tmpl-mustache")
-      <div class="panel panel-default" id="hint">
+      <div class="panel panel-default" class="hint">
       <a href="#" class="thumbnail pull-right" >
       <img src="{{ image }}" >
+
       </a>
       <div class="panel-body">
       <div class="hint_title">{{ title }}</div>
@@ -26,7 +27,7 @@ html
       <a href="{{link}}" class="pin"> give me more <i class="fa fa-angle-right" style="margin-right:1px;"></i></a> </div>
       </div>
     script#template_no_image(type="x-tmpl-mustache")
-      <div class="panel panel-default" id="hint">
+      <div class="panel panel-default" class="hint">
       <div class="panel-body no-image">
       <div class="hint_title">{{ title }}</div>
       <div class="hint_body">{{ body }}</div>
