fixing broken div

--- a/views/index.jade
+++ b/views/index.jade
@@ -23,6 +23,7 @@ html
       <div class="hint_title">{{ title }}</div>
       <div class="hint_body">{{ body }}</div>
       </div>
+      </div>
     script#template_no_image(type="x-tmpl-mustache")
       <div class="panel panel-default" class="hint">
       <div class="panel-body no-image">
