--- a/views/index.jade
+++ b/views/index.jade
@@ -54,6 +54,6 @@ html
       footer.footer
         .container
           .pull-right(style="margin-top:-2px;")
-            a(href="#", style="margin-right:12px;") get the code
-            a(href="#") about hint
+            a(href="https://github.com/reedrosenbluth/hint", style="margin-right:12px;") get the code
+            //a(href="#") about hint
     // /container
